--- a/docs/01. Refactor plan.md
+++ b/docs/01. Refactor plan.md
@@ -202,16 +202,22 @@ components/
 - ✅ Simplified the ChatEngine class by delegating history management
 - ✅ Added MessageHistoryService with enhanced functionality
 
-### Current Task (In Progress)
+### Current Task (Completed)
 
-#### Agent Routing Implementation (Step 6 - In Progress)
-- ⏳ Implementing agent detection logic with keyword scoring
-- ⏳ Creating specialized prompts for each agent type
-- ⏳ Adding agent-specific tool configurations
+#### Agent Routing Implementation (Step 6 - Completed)
+- ✅ Created `lib/chat-engine/agent-router.ts` to implement AI-powered agent detection
+- ✅ Implemented Vercel AI SDK's `generateObject` pattern with Zod schema
+- ✅ Used direct mapping from agent type to configuration
+- ✅ Created `app/api/agent-chat/route.ts` endpoint that follows the Vercel routing pattern
+- ✅ Simplified implementation to match Vercel documentation exactly
+- ✅ Made chat engine fully self-contained by moving prompt system directly into the chat engine module
+- ✅ Removed dependency on old AgentRouter class for getting system prompts
+- ✅ Implemented a modular file structure for prompts in `lib/chat-engine/prompts/` directory
+- ✅ Added widget prompt support for embedded chat experiences
 
 ### Next Tasks
 
-1. **Frontend Component Adaptation** (Step 7)
+1. **Frontend Component Adaptation** (Step 7 - In Progress)
    - Update frontend components to work with new response format
    - Ensure proper handling of tool results in UI
    - Update agent selection UI to reflect the new routing system
@@ -232,7 +238,15 @@ lib/
     core.ts                   # Core chat engine with request handling
     message-history.ts        # Message history management service
     cache-service.ts          # Centralized Redis caching service
-    prompts.ts                # Centralized prompt templates
+    agent-router.ts           # AI-powered agent detection and routing
+    prompts/                  # Centralized prompt system
+      index.ts                # Exports builder functions and types
+      base-prompt.ts          # Base prompt shared by all agents
+      copywriting-prompts.ts  # Copywriting agent specialized prompt
+      google-ads-prompts.ts   # Google Ads agent specialized prompt
+      facebook-ads-prompts.ts # Facebook Ads agent specialized prompt
+      quiz-prompts.ts         # Quiz agent specialized prompt
+      widget-prompt.ts        # Standard widget prompt
     tools/
       registry.ts             # Tool registration and management
       knowledge-base.ts       # Knowledge base tool implementation (RAG)
@@ -257,7 +271,13 @@ lib/
    - Implements proper Redis key management
    - Offers specialized methods for various data types
 
-4. **Tools Registry** (tools/registry.ts)
+4. **Prompt System** (prompts/index.ts and individual prompt files)
+   - Centralizes all prompt definitions in separate files
+   - Provides builder functions to compose complete prompts
+   - Supports different agent types and chat experiences
+   - Maintains clean separation between base and specialized instructions
+
+5. **Tools Registry** (tools/registry.ts)
    - Centralizes tool registration
    - Provides flexible tool selection based on requirements
    - Ensures consistent tool implementation
@@ -513,7 +533,66 @@ The new message history service enhances the conversation management:
 
 ## Next Steps
 
-1. Create the cache service for centralized Redis interaction
-2. Create the context builder for consistent context management
-3. Begin refactoring route handlers to use the new chat engine
-4. Implement comprehensive testing
+1. **Continue Agent Routing Implementation**
+   - Complete agent detection logic with keyword scoring
+   - Implement specialized prompts for each agent type
+   - Add agent-specific tool configurations
+
+2. **Update Frontend Components**
+   - Modify existing components to work with new response formats
+   - Ensure proper tool result handling in UI
+   - Update agent selection UI
+
+3. **Implement Testing Strategy**
+   - Add unit tests for core classes and services
+   - Create integration tests for route handlers
+   - Benchmark performance against legacy implementation
+
+## Legacy Files to Replace
+
+The following files will eventually be replaced by our new implementation once the refactoring is complete:
+
+### Core Chat Logic Files
+
+- `lib/chat/tools.ts` (8.8KB, 281 lines) - Will be replaced by tools registry and individual tool implementations
+- `lib/chat/prompt-builder.ts` (19KB, 528 lines) - Will be replaced by modular prompts in separate files under lib/chat-engine/prompts/
+- `lib/agents/agent-router.ts` - Will be replaced by the new agent-router.ts using Vercel AI SDK's generateObject pattern
+- `lib/agents/prompts/*` - Will be gradually replaced by corresponding files in lib/chat-engine/prompts/
+- `lib/chat/tool-manager.ts` (3.3KB, 123 lines) - Will be replaced by tools registry
+- `lib/chat/tool-schemas.ts` (2.1KB, 71 lines) - Will be replaced by tool-specific schema definitions
+- `lib/chat/response-validator.ts` (5.8KB, 170 lines) - Will be replaced by MessageHistoryService validation
+- `lib/chat/response-transformer.ts` (2.9KB, 87 lines) - Will be replaced by stream processor in ChatEngine
+- `lib/chat/validator.ts` (3.6KB, 114 lines) - Will be replaced by request validation in ChatEngine
+- `lib/chat/stream-processor.ts` (4.7KB, 138 lines) - Will be replaced by Vercel AI SDK's native streaming
+
+### API Route Files
+
+- `app/api/chat/route.ts` (58KB, 1389 lines) - Will be replaced by refactored route using ChatEngine
+- `app/api/widget-chat/route.ts` (16KB, 447 lines) - Will be replaced by refactored widget route
+- `app/api/chat/session/*` - Will be replaced by MessageHistoryService
+- `app/api/chat/[id]/*` - Will be replaced by MessageHistoryService
+- `app/api/chat/ai-message/*` - Will be replaced by MessageHistoryService and ChatEngine
+
+### Utility Files to Keep or Modify
+
+- `lib/chat/url-utils.ts` (2.6KB, 74 lines) - Consider keeping and using in the web scraper tool
+
+### Frontend Components
+
+The following frontend components will need to be updated to work with the new API routes and the Vercel AI SDK approach:
+
+#### Main Chat Components
+- `components/chat.tsx` - Will need updates to use Vercel AI SDK's `useChat` hook with the new route handlers
+- `components/messages.tsx` - Will need updates for handling tool calls and multi-step execution
+- `components/message.tsx` - Will need updates for displaying tool calls and results
+- `components/message-actions.tsx` - May need updates for new message structure
+- `components/multimodal-input.tsx` - For handling attachments with the new chat engine
+
+#### Widget Chat Components
+- `components/chat-widget/chat-widget.tsx` - Will need updates to use Vercel AI SDK with widget route
+
+#### Support Components
+- Any components that display or interact with tool results
+- Agent selection UI components
+
+These components will need updates to work with the Vercel AI SDK's `useChat` hook, but will need configuration updates to work with our new refactored API routes. The transition should be relatively smooth as the Vercel AI SDK maintains similar interfaces.
