--- a/docs/01. Refactor plan.md
+++ b/docs/01. Refactor plan.md
@@ -214,6 +214,8 @@ components/
 - ✅ Removed dependency on old AgentRouter class for getting system prompts
 - ✅ Implemented a modular file structure for prompts in `lib/chat-engine/prompts/` directory
 - ✅ Added widget prompt support for embedded chat experiences
+- ✅ Enhanced `streamText` implementation with callbacks following Vercel AI SDK best practices
+- ✅ Added improved logging for tool calls and completion metrics using `onChunk` and `onFinish` callbacks
 
 ### Next Tasks
 
