widget refactored, first draft

--- a/docs/01. Refactor plan.md
+++ b/docs/01. Refactor plan.md
@@ -592,7 +592,7 @@ The following files will eventually be replaced by our new implementation once t
 ### API Route Files
 
 - `app/api/chat/route.ts` (58KB, 1389 lines) - Will be replaced by refactored route using ChatEngine
-- `app/api/widget-chat/route.ts` (16KB, 447 lines) - Will be replaced by refactored widget route
+- ✅ `app/api/widget-chat/route.ts` (16KB, 447 lines) - Replaced by refactored widget route using createChatEngine
 - `app/api/chat/session/*` - Will be replaced by MessageHistoryService
 - `app/api/chat/[id]/*` - Will be replaced by MessageHistoryService
 - `app/api/chat/ai-message/*` - Will be replaced by MessageHistoryService and ChatEngine
@@ -628,3 +628,14 @@ The following frontend components will need to be updated to work with the new A
 - Agent selection UI components
 
 These components will need updates to work with the Vercel AI SDK's `useChat` hook, but will need configuration updates to work with our new refactored API routes. The transition should be relatively smooth as the Vercel AI SDK maintains similar interfaces.
+
+#### Cold Start Optimization
+
+- ✅ Implemented multi-layered cold start mitigation following Vercel AI SDK best practices
+- ✅ Added proactive API warming when widget loads on external sites
+- ✅ Created warmup script (`public/widget/wakeup.js`) for periodic pinging
+- ✅ Added automatic retry mechanism in the `useAppChat` hook for first message failures
+- ✅ Enhanced error handling in streamText with proper callbacks
+- ✅ Documented cold start optimization approach and best practices
+- ✅ Updated widget API endpoint to handle legacy and Vercel AI SDK request formats
+- ✅ Optimized for Edge Runtime to reduce cold start times
