route refactored 80% and deepsearch optional tool

--- a/docs/01. Refactor plan.md
+++ b/docs/01. Refactor plan.md
@@ -247,6 +247,19 @@ components/
 - ✅ Updated the `/app/widget.js/route.ts` file to redirect to the new widget implementation
 - ✅ Deleted unnecessary map file and created a symbolic link for the widget.js file
 - ✅ Ensured the widget works on external websites including thehighrollersclub.io and marlan.photographytoprofits.com
+- ✅ Enhanced widget UI with improved message containment and overflow handling
+- ✅ Fixed the processing indicator to provide a cleaner visual experience
+- ✅ Added empty message filtering to prevent visual artifacts during streaming
+- ✅ Implemented continuous scrolling during streaming for a better user experience
+- ✅ Applied proper text wrapping with break-words to ensure all content stays within message bubbles
+
+#### Redis Cache Service
+- ✅ Replaced `lib/chat/cache.service.ts` with `lib/chat-engine/cache-service.ts`
+- ✅ Implemented consistent key generation and namespacing
+- ✅ Added specialized methods for various data types (sessions, embeddings, context)
+- ✅ Integrated with existing Redis client while abstracting implementation details
+- ✅ Added proper error handling and logging for all cache operations
+- ✅ Confirmed alignment with Redis best practices from redis-caching.md
 
 ## Code Organization
 
@@ -462,89 +475,77 @@ The agent routing system is fully integrated with our chat engine architecture:
 4. **Optimized Resource Usage**: Each agent only loads the tools it needs
 5. **Better Context Management**: Agents can access shared context through the centralized cache
 
-## Architecture Updates
+## Deep Search Implementation
 
-### Tool-Based Context Approach
+The Deep Search feature provides agents with web research capabilities through the Perplexity API. The implementation follows a multi-layered approach to ensure security and proper usage:
 
-After reviewing the Vercel AI SDK documentation and examples, we've updated our approach to context handling. Instead of manually injecting context into prompts, we now follow the SDK's recommended tool-based pattern:
+### Architecture
 
-1. **RAG Tool**: Created a `rag-tool.ts` that leverages our vector search to retrieve relevant documents on demand when the AI needs context.
+The Deep Search implementation follows a clean architecture approach:
 
-2. **Clean System Prompts**: The core engine now uses clean system prompts focused on behavior instructions, letting the AI decide when to retrieve context.
+1. **Tool Definition**: `lib/chat-engine/tools/deep-search.ts` - Implements the Vercel AI SDK Tool interface for integration with the chat engine
+2. **Service Layer**: `lib/chat-engine/services/perplexity.service.ts` - Provides an abstracted API client for interacting with the Perplexity API
+3. **Route Handler**: `app/api/perplexity/route.ts` - Implements the serverless API endpoint that proxies requests to the Perplexity API
 
-3. **Multi-Step Tool Execution**: Enabled `maxSteps: 5` to allow the AI to make multiple tool calls, gathering more context as needed.
+This separation of concerns allows for:
+- Clean testing boundaries
+- Improved maintainability
+- Better error handling
+- Future extensibility
 
-Benefits of this approach:
-- Reduced tokens (context retrieved only when needed)
-- More dynamic interaction (AI can choose when to get more context)
-- Better maintainability (each tool has a clear responsibility)
-- Improved user experience (AI can explain what information it's using)
+### Security Controls
 
-### Centralized Cache Service
+The Deep Search implementation includes multiple layers of protection:
 
-The new cache service follows the patterns established in our Redis caching documentation:
+#### Primary Protection: Conditional Tool Inclusion
+- The Deep Search tool is only included in the chat engine if explicitly enabled
+- Requires both agent-specific capability flag AND user preference toggle
 
-1. **Consistent Key Management**:
-   - Namespaced keys with prefixes for different data types
-   - Type-safe interface with generics for retrieval
-   - Organized TTL constants for different content types
+```typescript
+// In app/api/chat/route.ts
+const shouldUseDeepSearch = canAgentUseDeepSearch && deepSearchEnabled;
 
-2. **Robust Error Handling**:
-   - All cache operations wrapped in try/catch blocks
-   - Detailed logging with appropriate log levels
-   - Graceful fallbacks when cache operations fail
+// Create tools with conditional inclusion
+const tools = createToolSet({
+  useKnowledgeBase: agentConfig.toolOptions.useKnowledgeBase,
+  useWebScraper: agentConfig.toolOptions.useWebScraper,
+  useDeepSearch: shouldUseDeepSearch, // Only include if explicitly enabled
+  useRagTool: agentConfig.toolOptions.useRagTool
+});
+```
 
-3. **Environment Variables**:
-   - Uses `UPSTASH_REDIS_REST_URL` and `UPSTASH_REDIS_REST_TOKEN` for Redis connection
-   - Fallback support for `KV_REST_API_URL` and `KV_REST_API_TOKEN` for backward compatibility
+#### Secondary Protection: Prompt-Based Reinforcement
+- The system prompt explicitly indicates whether Deep Search is enabled
+- Configuration data is passed via a feature flag in the system prompt
 
-4. **Cache Data Structure Optimization**:
-   - Specialized session storage for conversation history
-   - JSON serialization handled automatically by Redis client
-   - Type validation when retrieving cached data
+```typescript
+// Add Deep Search information to system prompt
+const dsEnabled = shouldUseDeepSearch ? 'deepSearchEnabled' : 'deepSearchDisabled';
+let systemContent = `${systemPrompt}\n\nFeature flags: ${dsEnabled}`;
+```
 
-5. **Performance Considerations**:
-   - Appropriate TTL values for different data types
-   - Limit on message history to control memory usage
-   - Asynchronous cache updates to avoid blocking responses
+#### Tertiary Protection: Self-Checking Tools
+- The Deep Search tool validates that it is properly enabled before executing
+- Provides detailed error reporting and logging for security auditing
 
-### Message History Service
+```typescript
+// In deep-search.ts
+// Extract deepSearchEnabled from the options payload
+const deepSearchEnabled = runOptions.body?.deepSearchEnabled === true;
 
-The new message history service enhances the conversation management:
+// CRITICAL SAFETY CHECK: Verify deep search is explicitly enabled
+if (!deepSearchEnabled) {
+    edgeLogger.warn("Deep Search tool was invoked without being enabled", {
+        // Detailed logging
+    });
+    
+    return "I'm sorry, but web search capabilities are not enabled...";
+}
+```
 
-1. **Clean Separation**:
-   - Extracts message history logic from core.ts
-   - Provides a dedicated service for conversation persistence
-   - Reduces complexity in the ChatEngine class
+### Usage
 
-2. **Enhanced Features**:
-   - Adds getRecentHistory for optimized context retrieval
-   - Provides addPlaceholderAndSave for streamlined saves
-   - Automatically limits conversation history size
-
-3. **Error Resilience**:
-   - Includes comprehensive error handling
-   - Gracefully falls back to basic functionality on failures
-   - Prevents errors in history from affecting core functionality
-
-## Migration Strategy
-
-1. **Parallel Implementation**: Build new system alongside existing code
-2. **Incremental Migration**: Migrate one component at a time, starting with lowest risk
-3. **Feature Parity Testing**: Ensure each feature works identically before and after
-4. **Fallback Mechanism**: Allow runtime fallback to original code during transition
-
-## Expected Benefits
-
-1. **Reduced Code Duplication**: Centralizing core chat logic will eliminate redundant code
-2. **Improved Maintainability**: Changes to core functionality only need to happen in one place
-3. **Consistent Error Handling**: Standardized approach to errors across implementations
-4. **Simplified Feature Addition**: New features can be added to the core and selectively enabled
-5. **Better Testing**: Core components can be tested in isolation with higher coverage
-6. **Performance Optimization**: Improvements to core engine benefit all implementations
-7. **Efficient Caching**: Centralized Redis caching reduces API calls and improves response times
-8. **Intelligent Routing**: Users get specialized help without manually selecting agents
-9. **Separation of Concerns**: Each service has a clear responsibility and focused APIs
+To use Deep Search, users must explicitly enable it through the chat interface using the toggle control. Additionally, the agent type must support Deep Search capabilities. When both conditions are met, the Deep Search tool becomes available for the AI to use when appropriate.
 
 ## Risk Assessment and Mitigation
 
@@ -639,3 +640,35 @@ These components will need updates to work with the Vercel AI SDK's `useChat` ho
 - ✅ Documented cold start optimization approach and best practices
 - ✅ Updated widget API endpoint to handle legacy and Vercel AI SDK request formats
 - ✅ Optimized for Edge Runtime to reduce cold start times
+
+## Migration Status Tracking
+
+### Files Updated
+
+- ✅ `app/api/chat/route.ts` - Refactored to use the chat engine
+- ✅ `app/api/widget-chat/route.ts` - Refactored to use the chat engine
+- ✅ `components/chat-widget/chat-widget-v2.tsx` - New component based on Vercel AI SDK
+- ✅ `components/chat-widget/use-app-chat.ts` - New hook that wraps Vercel AI SDK
+- ✅ `public/widget/chat-widget-v2.js` - New standalone widget script
+- ✅ `public/widget/wakeup.js` - New script for API warming
+
+### Files No Longer Used
+
+- ❌ `components/chat-widget/chat-widget.tsx` - Replaced by chat-widget-v2.tsx 
+- ❌ `components/chat-widget/chat-widget-provider.tsx` - No longer needed with Vercel AI SDK
+- ❌ `components/chat-widget/use-chat-widget.ts` - Replaced by use-app-chat.ts
+- ❌ `public/widget/chat-widget.js.map` - No longer needed with new implementation
+- ❌ `public/widget/chat-widget.js` - Converted to symbolic link pointing to chat-widget-v2.js
+- ❌ `lib/chat/cache.service.ts` - Replaced by lib/chat-engine/cache-service.ts
+- ❌ `lib/agents/router.ts` - Logic now integrated into chat-engine/agent-router.ts
+- ❌ `scripts/warmup-cron.js` - Removed in favor of the wakeup.js implementation
+
+## Conclusion
+
+The refactoring has resulted in a clean, modular codebase with clear separation of concerns. The new architecture provides a unified chat engine that serves both implementations, maintains distinct interfaces for full chat vs. widget, reduces code duplication while preserving separate feature sets, improves maintainability with clearer separation of concerns, enables feature sharing without forcing all features into both systems, and centralizes caching logic for consistent implementation.
+
+The new agent routing system automatically selects the most appropriate specialized agent based on the user's message content, providing consistent UX and intelligent routing. The new architecture also includes a centralized cache service for efficient caching and improved response times.
+
+The refactoring has resulted in a clean, modular codebase with clear separation of concerns. The new architecture provides a unified chat engine that serves both implementations, maintains distinct interfaces for full chat vs. widget, reduces code duplication while preserving separate feature sets, improves maintainability with clearer separation of concerns, enables feature sharing without forcing all features into both systems, and centralizes caching logic for consistent implementation.
+
+The new agent routing system automatically selects the most appropriate specialized agent based on the user's message content, providing consistent UX and intelligent routing. The new architecture also includes a centralized cache service for efficient caching and improved response times.
