refactoring serrvice files 50%

--- a/docs/01. Refactor plan.md
+++ b/docs/01. Refactor plan.md
@@ -484,7 +484,7 @@ The Deep Search feature provides agents with web research capabilities through t
 The Deep Search implementation follows a clean architecture approach:
 
 1. **Tool Definition**: `lib/chat-engine/tools/deep-search.ts` - Implements the Vercel AI SDK Tool interface for integration with the chat engine
-2. **Service Layer**: `lib/chat-engine/services/perplexity.service.ts` - Provides an abstracted API client for interacting with the Perplexity API
+2. **Service Layer**: `lib/services/perplexity.service.ts` - Provides an abstracted API client for interacting with the Perplexity API
 3. **Route Handler**: `app/api/perplexity/route.ts` - Implements the serverless API endpoint that proxies requests to the Perplexity API
 
 This separation of concerns allows for:
@@ -672,3 +672,50 @@ The new agent routing system automatically selects the most appropriate speciali
 The refactoring has resulted in a clean, modular codebase with clear separation of concerns. The new architecture provides a unified chat engine that serves both implementations, maintains distinct interfaces for full chat vs. widget, reduces code duplication while preserving separate feature sets, improves maintainability with clearer separation of concerns, enables feature sharing without forcing all features into both systems, and centralizes caching logic for consistent implementation.
 
 The new agent routing system automatically selects the most appropriate specialized agent based on the user's message content, providing consistent UX and intelligent routing. The new architecture also includes a centralized cache service for efficient caching and improved response times.
+
+## Service-Based Architecture
+
+The refactoring includes the implementation of a service-based architecture that separates external API calls and business logic from the tool definitions. This architecture provides a clean separation of concerns and improves maintainability.
+
+### Structure
+
+```
+lib/
+  services/                     # Services that handle external API calls
+    perplexity.service.ts       # Handles interaction with Perplexity API
+    puppeteer.service.ts        # Handles web scraping operations
+    vector-search.service.ts    # Handles vector search with Supabase
+  chat-engine/
+    tools/                      # Vercel AI SDK tool definitions
+      deep-search.ts            # Uses perplexity.service.ts
+      web-scraper.ts            # Uses puppeteer.service.ts
+      rag-tool.ts               # Uses vector/documentRetrieval.ts
+    registry.ts                 # Centralized tool registration
+```
+
+### Services
+
+1. **Perplexity Service (`perplexity.service.ts`)**
+   - Encapsulates all interaction with the Perplexity API
+   - Handles API key validation, request formatting, and error handling
+   - Used by the Deep Search tool to perform web searches
+
+2. **Puppeteer Service (`puppeteer.service.ts`)**
+   - Provides web scraping capabilities through a Puppeteer-based scraper
+   - Handles URL validation, content extraction, and caching
+   - Used by the Web Scraper tool to extract content from web pages
+
+3. **Vector Search Service (`vector-search.service.ts`)**
+   - Manages embedding generation and vector search using Supabase
+   - Integrates with the RAG tool through the documentRetrieval.ts module
+   - Provides semantic search capabilities for the knowledge base
+
+### Benefits
+
+This service-based architecture provides several benefits:
+
+1. **Separation of Concerns**: Each module has a clear responsibility, making the codebase easier to understand and maintain.
+2. **Testing**: Services can be tested independently of the tools that use them.
+3. **Reuse**: Services can be used by multiple tools or components.
+4. **Abstraction**: Tools don't need to know the implementation details of the services they use.
+5. **Future-Proofing**: Services can be updated or replaced without changing the tool interface.
