consolidated rag tools

--- a/docs/01. Refactor plan.md
+++ b/docs/01. Refactor plan.md
@@ -246,7 +246,6 @@ components/
 - ✅ Updated admin widget page to use the new `ChatWidgetV2` component
 - ✅ Updated the `/app/widget.js/route.ts` file to redirect to the new widget implementation
 - ✅ Deleted unnecessary map file and created a symbolic link for the widget.js file
-- ✅ Ensured the widget works on external websites including thehighrollersclub.io and marlan.photographytoprofits.com
 - ✅ Enhanced widget UI with improved message containment and overflow handling
 - ✅ Fixed the processing indicator to provide a cleaner visual experience
 - ✅ Added empty message filtering to prevent visual artifacts during streaming
@@ -587,13 +586,13 @@ The following files will eventually be replaced by our new implementation once t
 - `lib/chat/tool-schemas.ts` (2.1KB, 71 lines) - Will be replaced by tool-specific schema definitions
 - `lib/chat/response-validator.ts` (5.8KB, 170 lines) - Will be replaced by MessageHistoryService validation
 - `lib/chat/response-transformer.ts` (2.9KB, 87 lines) - Will be replaced by stream processor in ChatEngine
-- `lib/chat/validator.ts` (3.6KB, 114 lines) - Will be replaced by request validation in ChatEngine
+- `lib/chat/validator.ts` (3.6KB, 114 lines) - Replaced by direct validation in route handler
 - `lib/chat/stream-processor.ts` (4.7KB, 138 lines) - Will be replaced by Vercel AI SDK's native streaming
 
 ### API Route Files
 
 - `app/api/chat/route.ts` (58KB, 1389 lines) - Will be replaced by refactored route using ChatEngine
-- ✅ `app/api/widget-chat/route.ts` (16KB, 447 lines) - Replaced by refactored widget route using createChatEngine
+- `app/api/widget-chat/route.ts` (16KB, 447 lines) - Replaced by refactored widget route using createChatEngine
 - `app/api/chat/session/*` - Will be replaced by MessageHistoryService
 - `app/api/chat/[id]/*` - Will be replaced by MessageHistoryService
 - `app/api/chat/ai-message/*` - Will be replaced by MessageHistoryService and ChatEngine
@@ -660,62 +659,14 @@ These components will need updates to work with the Vercel AI SDK's `useChat` ho
 - ❌ `public/widget/chat-widget.js.map` - No longer needed with new implementation
 - ❌ `public/widget/chat-widget.js` - Converted to symbolic link pointing to chat-widget-v2.js
 - ❌ `lib/chat/cache.service.ts` - Replaced by lib/chat-engine/cache-service.ts
+- ❌ `lib/chat/validator.ts` - Replaced by direct validation in route handler
+- ❌ `lib/vector/rag-cache.ts` - Consolidated into lib/cache/redis-client.ts for unified Redis handling
+- ❌ `lib/chat-engine/tools/rag-tool.ts` - Consolidated into knowledge-base.ts to avoid duplicate functionality
 - ❌ `lib/agents/router.ts` - Logic now integrated into chat-engine/agent-router.ts
 - ❌ `scripts/warmup-cron.js` - Removed in favor of the wakeup.js implementation
 
-## Conclusion
+### Files Moved
 
-The refactoring has resulted in a clean, modular codebase with clear separation of concerns. The new architecture provides a unified chat engine that serves both implementations, maintains distinct interfaces for full chat vs. widget, reduces code duplication while preserving separate feature sets, improves maintainability with clearer separation of concerns, enables feature sharing without forcing all features into both systems, and centralizes caching logic for consistent implementation.
-
-The new agent routing system automatically selects the most appropriate specialized agent based on the user's message content, providing consistent UX and intelligent routing. The new architecture also includes a centralized cache service for efficient caching and improved response times.
-
-The refactoring has resulted in a clean, modular codebase with clear separation of concerns. The new architecture provides a unified chat engine that serves both implementations, maintains distinct interfaces for full chat vs. widget, reduces code duplication while preserving separate feature sets, improves maintainability with clearer separation of concerns, enables feature sharing without forcing all features into both systems, and centralizes caching logic for consistent implementation.
-
-The new agent routing system automatically selects the most appropriate specialized agent based on the user's message content, providing consistent UX and intelligent routing. The new architecture also includes a centralized cache service for efficient caching and improved response times.
-
-## Service-Based Architecture
-
-The refactoring includes the implementation of a service-based architecture that separates external API calls and business logic from the tool definitions. This architecture provides a clean separation of concerns and improves maintainability.
-
-### Structure
-
-```
-lib/
-  services/                     # Services that handle external API calls
-    perplexity.service.ts       # Handles interaction with Perplexity API
-    puppeteer.service.ts        # Handles web scraping operations
-    vector-search.service.ts    # Handles vector search with Supabase
-  chat-engine/
-    tools/                      # Vercel AI SDK tool definitions
-      deep-search.ts            # Uses perplexity.service.ts
-      web-scraper.ts            # Uses puppeteer.service.ts
-      rag-tool.ts               # Uses vector/documentRetrieval.ts
-    registry.ts                 # Centralized tool registration
-```
-
-### Services
-
-1. **Perplexity Service (`perplexity.service.ts`)**
-   - Encapsulates all interaction with the Perplexity API
-   - Handles API key validation, request formatting, and error handling
-   - Used by the Deep Search tool to perform web searches
-
-2. **Puppeteer Service (`puppeteer.service.ts`)**
-   - Provides web scraping capabilities through a Puppeteer-based scraper
-   - Handles URL validation, content extraction, and caching
-   - Used by the Web Scraper tool to extract content from web pages
-
-3. **Vector Search Service (`vector-search.service.ts`)**
-   - Manages embedding generation and vector search using Supabase
-   - Integrates with the RAG tool through the documentRetrieval.ts module
-   - Provides semantic search capabilities for the knowledge base
-
-### Benefits
-
-This service-based architecture provides several benefits:
-
-1. **Separation of Concerns**: Each module has a clear responsibility, making the codebase easier to understand and maintain.
-2. **Testing**: Services can be tested independently of the tools that use them.
-3. **Reuse**: Services can be used by multiple tools or components.
-4. **Abstraction**: Tools don't need to know the implementation details of the services they use.
-5. **Future-Proofing**: Services can be updated or replaced without changing the tool interface.
+- ✅ `lib/vector/documentRetrieval.ts` → `lib/services/vector/document-retrieval.ts` - Moved to services folder with kebab-case naming
+- ✅ `lib/vector/embeddings.ts` → `lib/services/vector/embeddings.ts` - Moved to services folder to follow service pattern
+- ✅ `lib/vector/types.ts` → `lib/services/vector/types.ts` - Moved to services folder to follow service pattern
